lib/src/sdk/rust/snapshots/usage__sdk__rust__tests__rust_flag_edge_cases.snap
---
source: lib/src/sdk/rust/mod.rs
expression: types
---
//! @generated by usage-cli from test.usage.kdl. Do not edit manually.


#[derive(Debug, Clone)]
pub struct ToolFlags {
    /// Short-only flag. Short: -v
    pub v: Option<bool>,
    /// Reserved keyword
    #[deprecated = "Use --kind"]
    pub _type: Option<bool>,
    /// Count flag with default. Default: 2
    pub level: Option<i32>,
    /// Value flag with default. Default: json
    pub format: Option<String>,
    /// Required flag
    pub confirm: bool,
    /// Repeatable boolean flag
    pub verbose: Option<Vec<bool>>,
}
