lib/src/sdk/rust/snapshots/usage__sdk__rust__tests__rust_flag_with_choices.snap
---
source: lib/src/sdk/rust/mod.rs
expression: types
---
//! @generated by usage-cli from test.usage.kdl. Do not edit manually.

use std::fmt;


#[derive(Debug, Clone, PartialEq)]
pub enum ShellChoice {
    Bash,
    Zsh,
    Fish,
}

impl fmt::Display for ShellChoice {
    fn fmt(&self, f: &mut fmt::Formatter<'_>) -> fmt::Result {
        match self {
            Self::Bash => write!(f, "bash"),
            Self::Zsh => write!(f, "zsh"),
            Self::Fish => write!(f, "fish"),
        }
    }
}

impl ShellChoice {
    pub fn as_str(&self) -> &'static str {
        match self {
            Self::Bash => "bash",
            Self::Zsh => "zsh",
            Self::Fish => "fish",
        }
    }
}

#[derive(Debug, Clone, Default)]
pub struct ToolFlags {
    /// Shell type
    pub shell: Option<ShellChoice>,
}
