lib/src/sdk/rust/snapshots/usage__sdk__rust__tests__rust_flag_with_env.snap
---
source: lib/src/sdk/rust/mod.rs
expression: types
---
//! @generated by usage-cli from test.usage.kdl. Do not edit manually.


#[derive(Debug, Clone, Default)]
pub struct AppFlags {
    /// Config file. Env: APP_CONFIG
    pub config: Option<String>,
}
