lib/src/sdk/rust/snapshots/usage__sdk__rust__tests__rust_full_feature_types.snap
---
source: lib/src/sdk/rust/mod.rs
expression: "get_file(&output, \"types.rs\")"
---
//! @generated by usage-cli from test.usage.kdl. Do not edit manually.

use std::fmt;

pub const VERSION: &str = "1.2.3";
pub const ABOUT: &str = "A powerful CLI tool";
pub const AUTHOR: &str = "Jane Doe";

#[derive(Debug, Clone, PartialEq)]
pub enum TargetChoice {
    Debug,
    Release,
}

impl fmt::Display for TargetChoice {
    fn fmt(&self, f: &mut fmt::Formatter<'_>) -> fmt::Result {
        match self {
            Self::Debug => write!(f, "debug"),
            Self::Release => write!(f, "release"),
        }
    }
}

impl TargetChoice {
    pub fn as_str(&self) -> &'static str {
        match self {
            Self::Debug => "debug",
            Self::Release => "release",
        }
    }
}

#[derive(Debug, Clone, PartialEq)]
pub enum EnvChoice {
    Staging,
    Production,
}

impl fmt::Display for EnvChoice {
    fn fmt(&self, f: &mut fmt::Formatter<'_>) -> fmt::Result {
        match self {
            Self::Staging => write!(f, "staging"),
            Self::Production => write!(f, "production"),
        }
    }
}

impl EnvChoice {
    pub fn as_str(&self) -> &'static str {
        match self {
            Self::Staging => "staging",
            Self::Production => "production",
        }
    }
}

#[derive(Debug, Clone, Default)]
pub struct GlobalFlags {
    /// Verbosity level. Short: -v
    pub verbose: Option<i32>,
    /// Config file path. Env: MYTOOL_CONFIG. Short: -C
    pub config: Option<String>,
}

#[derive(Debug, Clone)]
pub struct MytoolArgs {
    /// Input file
    pub input: String,
    /// Extra files
    pub extra: Vec<String>,
}

#[derive(Debug, Clone, Default)]
pub struct MytoolFlags {
    /// Verbosity level. Short: -v
    pub verbose: Option<i32>,
    /// Config file path. Env: MYTOOL_CONFIG. Short: -C
    pub config: Option<String>,
    /// Show what would be done
    pub dry_run: Option<bool>,
}

#[derive(Debug, Clone)]
pub struct BuildArgs {
    /// Build target
    pub target: TargetChoice,
    /// Output directory
    pub output: String,
}

#[derive(Debug, Clone, Default)]
pub struct BuildFlags {
    /// Verbosity level. Short: -v
    pub verbose: Option<i32>,
    /// Config file path. Env: MYTOOL_CONFIG. Short: -C
    pub config: Option<String>,
    /// Parallel jobs. Short: -j
    pub jobs: Option<Vec<String>>,
    /// Build in release mode
    pub release: Option<bool>,
}

#[derive(Debug, Clone)]
pub struct DeployArgs {
    /// Target environment
    pub env: EnvChoice,
    /// Deployment tags
    pub tags: Vec<String>,
}

#[derive(Debug, Clone, Default)]
pub struct DeployFlags {
    /// Verbosity level. Short: -v
    pub verbose: Option<i32>,
    /// Config file path. Env: MYTOOL_CONFIG. Short: -C
    pub config: Option<String>,
    /// Force deploy. Short: -f
    #[deprecated = "Use --confirm instead"]
    pub force: Option<bool>,
    /// Confirm deployment
    pub confirm: Option<bool>,
}
