lib/src/sdk/rust/snapshots/usage__sdk__rust__tests__rust_global_flags_flags_only.snap
---
source: lib/src/sdk/rust/mod.rs
expression: client
---
//! @generated by usage-cli from test.usage.kdl. Do not edit manually.

use crate::runtime::{CliRunner, CliResult};
use crate::types::{AppFlags, GlobalFlags, StatusFlags};

pub struct App {
    runner: CliRunner,
    /// Show status
    pub status: Status,
    /// Show info
    pub info: Info,
}

impl App {
    pub fn new(bin_path: &str) -> Self {
        let runner = CliRunner::new(bin_path);
        Self {
            status: Status::new(runner.clone()),
            info: Info::new(runner.clone()),
            runner,
        }
    }

    pub fn default_bin() -> Self {
        Self::new("app")
    }
    /// [-v --verbose] <SUBCOMMAND>

    pub fn exec(&self, flags: Option<AppFlags>) -> Result<CliResult, crate::runtime::CliError> {
        let mut cmd_args: Vec<String> = vec![];
        let flag_args = self.build_flag_args(flags);
        cmd_args.extend(flag_args);
        self.runner.run(cmd_args)
    }

    fn build_flag_args(&self, flags: Option<AppFlags>) -> Vec<String> {
        let mut result = Vec::new();
        let flags = match flags { Some(f) => f, None => return result };
        if let Some(v) = flags.verbose { if v { result.push("--verbose".to_string()); } }
        result
    }
}

/// Show status
pub struct Status {
    runner: CliRunner,
}

impl Status {
    pub fn new(runner: CliRunner) -> Self {
        Self {
            runner,
        }
    }
    /// status [--json]

    pub fn exec(&self, flags: Option<StatusFlags>) -> Result<CliResult, crate::runtime::CliError> {
        let mut cmd_args: Vec<String> = vec!["status".to_string()];
        let flag_args = self.build_flag_args(flags);
        cmd_args.extend(flag_args);
        self.runner.run(cmd_args)
    }

    fn build_flag_args(&self, flags: Option<StatusFlags>) -> Vec<String> {
        let mut result = Vec::new();
        let flags = match flags { Some(f) => f, None => return result };
        if let Some(v) = flags.verbose { if v { result.push("--verbose".to_string()); } }
        if let Some(v) = flags.json { if v { result.push("--json".to_string()); } }
        result
    }
}

/// Show info
pub struct Info {
    runner: CliRunner,
}

impl Info {
    pub fn new(runner: CliRunner) -> Self {
        Self {
            runner,
        }
    }
    /// info

    pub fn exec(&self, flags: Option<GlobalFlags>) -> Result<CliResult, crate::runtime::CliError> {
        let mut cmd_args: Vec<String> = vec!["info".to_string()];
        let flag_args = self.build_flag_args(flags);
        cmd_args.extend(flag_args);
        self.runner.run(cmd_args)
    }

    fn build_flag_args(&self, flags: Option<GlobalFlags>) -> Vec<String> {
        let mut result = Vec::new();
        let flags = match flags { Some(f) => f, None => return result };
        if let Some(v) = flags.verbose { if v { result.push("--verbose".to_string()); } }
        result
    }
}
