lib/src/sdk/rust/snapshots/usage__sdk__rust__tests__rust_global_repeatable_flags.snap
---
source: lib/src/sdk/rust/mod.rs
expression: types
---
//! @generated by usage-cli from test.usage.kdl. Do not edit manually.


#[derive(Debug, Clone, Default)]
pub struct GlobalFlags {
    /// Repeatable verbose. Short: -v
    pub verbose: Option<Vec<bool>>,
    /// Repeatable tag
    pub tag: Option<Vec<String>>,
}

#[derive(Debug, Clone, Default)]
pub struct AppFlags {
    /// Repeatable verbose. Short: -v
    pub verbose: Option<Vec<bool>>,
    /// Repeatable tag
    pub tag: Option<Vec<String>>,
}

#[derive(Debug, Clone)]
pub struct RunArgs {
    pub target: String,
}
