lib/src/sdk/rust/snapshots/usage__sdk__rust__tests__rust_hyphenated_subcommands.snap
---
source: lib/src/sdk/rust/mod.rs
expression: "get_file(&output, \"client.rs\")"
---
//! @generated by usage-cli from test.usage.kdl. Do not edit manually.

use crate::runtime::{CliRunner, CliResult};
use crate::types::{AddRemoteArgs, RemoveRemoteArgs};

pub struct Cli {
    runner: CliRunner,
    /// Add a remote
    pub add_remote: AddRemote,
    /// Remove a remote
    pub remove_remote: RemoveRemote,
}

impl Cli {
    pub fn new(bin_path: &str) -> Self {
        let runner = CliRunner::new(bin_path);
        Self {
            add_remote: AddRemote::new(runner.clone()),
            remove_remote: RemoveRemote::new(runner.clone()),
            runner,
        }
    }

    pub fn default_bin() -> Self {
        Self::new("cli")
    }
    /// <SUBCOMMAND>

    pub fn exec(&self) -> Result<CliResult, crate::runtime::CliError> {
        let cmd_args: Vec<String> = vec![];
        self.runner.run(cmd_args)
    }
}

/// Add a remote
pub struct AddRemote {
    runner: CliRunner,
}

impl AddRemote {
    pub fn new(runner: CliRunner) -> Self {
        Self {
            runner,
        }
    }
    /// add-remote <name> <url>

    pub fn exec(&self, args: AddRemoteArgs) -> Result<CliResult, crate::runtime::CliError> {
        let mut cmd_args: Vec<String> = vec!["add-remote".to_string()];
        cmd_args.push(args.name.to_string());
        cmd_args.push(args.url.to_string());
        self.runner.run(cmd_args)
    }
}

/// Remove a remote
pub struct RemoveRemote {
    runner: CliRunner,
}

impl RemoveRemote {
    pub fn new(runner: CliRunner) -> Self {
        Self {
            runner,
        }
    }
    /// remove-remote <name>

    pub fn exec(&self, args: RemoveRemoteArgs) -> Result<CliResult, crate::runtime::CliError> {
        let mut cmd_args: Vec<String> = vec!["remove-remote".to_string()];
        cmd_args.push(args.name.to_string());
        self.runner.run(cmd_args)
    }
}
